<resources>
    <string name="app_name">有种</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="error">错误</string>
    <string name="shutdown">退出</string>
    <string name="replace">替换</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="deleting">删除</string>
    <string name="select_all">全选</string>
    <string name="apply">应用</string>
    <string name="save">保存</string>
    <string name="install">安装</string>
    <string name="search">搜索</string>
    <string name="elapsed_time_format_d_h_mm">%1$d 天 %2$d 小时 %3$d 分钟</string>
    <string name="elapsed_time_format_h_mm_ss">%1$d 小时 %2$d 分钟 %3$d 秒</string>
    <string name="elapsed_time_format_mm_ss">%1$d 分钟 %2$d 秒</string>
    <string name="elapsed_time_format_ss">%1$d 秒</string>
    <string name="sort_by_ascending">By ascending</string>
    <string name="sort_by_descending">By descending</string>
    <string name="sorting">Sorting</string>
    <string-array name="sort_direction_values" translatable="false">
        <item>asc</item>
        <item>desc</item>
    </string-array>
    <string name="main_empty_torrent_list">没有 torrent 任务</string>
    <string name="spinner_all_torrents">全部</string>
    <string name="spinner_downloading_torrents">正在下载</string>
    <string name="spinner_downloaded_torrents">已下载</string>
    <string name="delete_torrent_with_downloaded_files">同时删除文件</string>
    <string name="delete_selected_torrent">删除所选择的 torrent ？此操作无法撤销。</string>
    <string name="delete_selected_torrents">删除所选择的所有 torrent ？此操作无法撤销。</string>
    <string name="force_recheck_torrent">强制重新效验文件</string>
    <string name="force_announce_torrent">强制发布</string>
    <string name="add_link">添加链接</string>
    <string name="dialog_add_link_title">输入磁力或 HTTP/HTTPS 链接</string>
    <string name="torrent_list_empty">没有 torrent 任务</string>
    <string name="select_or_add_torrent">选择或添加一个 torrent</string>
    <string name="error_empty_link">请输入链接地址</string>
    <string name="error_invalid_link">无效的链接地址</string>
    <string name="error_open_torrent_file">无法打开目标种子文件</string>
    <string name="open_file">打开文件</string>
    <string name="settings">设置</string>
    <string name="ip_filter_add_error">无法添加 IP 过滤器。可能文件已损坏或格式不正确。</string>
    <string name="proxy_settings_applied">代理设置应用成功</string>
    <string name="proxy_settings_apply_after_reboot">代理设置成功，重启应用后生效。</string>
    <string name="theme_settings_apply_after_reboot">主题设置成功，重启应用后生效</string>
    <string name="settings_apply_after_reboot">设置成功，重启应用后生效</string>
    <string name="about">关于</string>
    <string-array name="sort_torrent_by">
        <item>Without sorting</item>
        <item>Name</item>
        <item>Size</item>
        <item>Progress</item>
        <item>ETA</item>
        <item>Peers</item>
        <item>Leechers</item>
    </string-array>
    <string-array name="sort_torrent_values" translatable="false">
        <item>none</item>
        <item>name</item>
        <item>size</item>
        <item>progress</item>
        <item>ETA</item>
        <item>peers</item>
        <item>leechers</item>
    </string-array>
    <string name="hint_search">请输入资源名搜索</string>
    <string name="downloading_torrent_notify_template" formatted="false">%1$d%% \u2022 %2$s \u2022 \u2193 %3$s/s \u2022 %4$s</string>
    <string name="seeding_torrent_notify_template" formatted="false">%1$s \u2022 \u2191 %2$s/s \u2022 %3$s</string>
    <string name="other_torrent_notify_template" formatted="false">%1$s \u2022 %2$s</string>
    <string name="torrent_count_notify_template" formatted="false">正在下载: %1$d 总计: %2$d</string>
    <string name="app_running_in_the_background">LibreTorrent 正在后台运行</string>
    <string name="network_online">网络状态：在线</string>
    <string name="network_offline">网络状态：离线</string>
    <string name="torrent_finished_notify">torrent 已完成</string>
    <string name="torrents_move_notify_title" formatted="false">移动 torrent 下载文件 （%1$d/%2$d）</string>
    <string name="torrents_move_content">请稍等&#8230;</string>
    <string name="torrents_moved_title">torrent 下载文件已移动</string>
    <string name="torrents_moved_content" formatted="false">成功: %1$d; 失败: %2$d</string>
    <string name="torrents_move_inbox_successfully">成功:</string>
    <string name="torrents_move_inbox_failed">失败:</string>
    <string name="copy_torrent_link">复制链接</string>
    <string name="download_in_xunlei">迅雷下载</string>
    <string name="download_now">直接下载</string>
    <string name="download_counter_template" formatted="false">%1$s/%2$s （%3$d%%）</string>
    <string name="download_upload_speed_template" formatted="false">\u2193 %1$s/s | \u2191 %2$s/s</string>
    <string name="torrent_status_downloading">下载中</string>
    <string name="torrent_status_seeding">做种中</string>
    <string name="torrent_status_paused">已暂停</string>
    <string name="torrent_status_stopped">已停止</string>
    <string name="torrent_status_checking">检查中</string>
    <string name="torrent_status_finished">已完成</string>
    <string name="perm_denied_title">获取权限失败</string>
    <string name="perm_denied_warning">应用程序没有这个权限将无法保存内存中的 torrent 文件。应用程序将无法正常工作。您确定要拒绝此权限吗？</string>
    <string name="add_torrent_title">添加 torrent</string>
    <string name="error_decode_torrent">torrent 文件解码失败。可能文件已损坏或格式不正确。</string>
    <string name="error_io_torrent">读取 torrent 文件时出错</string>
    <string name="error_fetch_link">无法从链接中提取数据</string>
    <string name="error_invalid_link_or_path">无效的链接或路径无效</string>
    <string name="decode_torrent_progress_title">加载中</string>
    <string name="decode_torrent_default_message">请稍等&#8230;</string>
    <string name="decode_torrent_fetch_magnet_message">正在从磁链中获取数据。请稍等&#8230;</string>
    <string name="decode_torrent_downloading_torrent_message">正在下载 torrent 文件。请稍等&#8230;</string>
    <string name="error_add_torrent">添加 torrent 失败</string>
    <string name="error_file_not_found_add_torrent">无法添加 torrent 。可能是 torrent 文件已被移动或删除。</string>
    <string name="error_io_add_torrent">无法添加 torrent 。I/O 异常。</string>
    <string name="torrent_exist">torrent 已经存在。torrent 将进行合并。</string>
    <string name="error_field_required">必填</string>
    <string name="error_no_files_selected">尚未选择文件</string>
    <string name="free_space" formatted="false">剩余空间 %1$s</string>
    <string name="error_free_space">所选目录没有足够的可用空间用以下载所选文件</string>
    <string name="files_size" formatted="false">已选文件大小 %1$s ，torrent 文件总大小 %2$s</string>
    <string name="start_torrent">开始 torrent</string>
    <string name="torrent_info">详情</string>
    <string name="torrent_files">文件</string>
    <string name="torrent_name">torrent 名称</string>
    <string name="upload_torrent_into">下载至</string>
    <string name="torrent_size">文件大小</string>
    <string name="torrent_file_count">文件数量</string>
    <string name="torrent_hash_sum">Hash 特征值</string>
    <string name="torrent_comment">注释</string>
    <string name="torrent_create_date">torrent 文件创建日期</string>
    <string name="torrent_created_in_program">torrent 文件创建工具</string>
    <string name="sequential_download">顺序下载</string>
    <string name="enable_sequential_download">启用顺序下载</string>
    <string name="dir_chooser_title">选择文件夹</string>
    <string name="file_chooser_title">选择文件</string>
    <string name="torrent_file_chooser_title">选择 torrent 文件</string>
    <string name="dialog_new_folder_title">创建文件夹</string>
    <string name="error_dialog_new_folder">无法创建文件夹</string>
    <string name="error_perm_write_in_folder">无法下载至所选文件夹。请选择其他文件夹。</string>
    <string name="error_open_dir">无法打开文件夹</string>
    <string name="home_directory">主页</string>
    <string name="storage_name_and_size" formatted="false">%1$s (%2$s)</string>
    <string name="internal_storage_name">Internal storage</string>
    <string name="external_storage_name" formatted="false">External storage %1$d</string>
    <string name="permission_denied">Permission denied</string>
    <string name="report">反馈</string>
    <string name="more_details">更多细节</string>
    <string name="file_status_template" formatted="false">%1$s \u2022 %2$s</string>
    <string name="file_downloading_status_template" formatted="false">%1$s \u2022 %2$s/%3$s （%4$d%%）</string>
    <string name="file_priority_normal">正常</string>
    <string name="file_priority_low">未下载</string>
    <string name="file_priority_high">高</string>
    <string name="file_priority_mixed">混合</string>
    <string name="change_priority">修改优先等级</string>
    <string name="dialog_change_priority_title">优先等级</string>
    <string name="change_priority_low">未下载</string>
    <string name="change_priority_normal">正常</string>
    <string name="change_priority_high">高</string>
    <string name="torrent_state">状态</string>
    <string name="torrent_speed">速度</string>
    <string name="torrent_downloaded">已下载</string>
    <string name="torrent_ETA">剩余时间</string>
    <string name="torrent_seeds">种子</string>
    <string name="torrent_peers">用户</string>
    <string name="torrent_leechers">不完整种子</string>
    <string name="torrent_peers_template" formatted="false">%1$d （%2$d）</string>
    <string name="torrent_uploaded">已上传</string>
    <string name="torrent_share_ratio">分享率</string>
    <string name="torrent_active_time">活动时间</string>
    <string name="torrent_seeding_time">做种时间</string>
    <string name="torrent_pieces">区块</string>
    <string name="torrent_pieces_template" formatted="false">%1$d/%2$d （%3$s）</string>
    <string name="torrent_trackers">tracker</string>
    <string name="tracker_state_working">工作</string>
    <string name="tracker_state_not_working">未工作</string>
    <string name="tracker_state_error" formatted="false">错误: %1$s</string>
    <string name="tracker_state_updating">更新中&#8230;</string>
    <string name="tracker_state_not_contacted">尚未连接</string>
    <string name="share_tracker_url">分享链接</string>
    <string name="delete_selected_tracker">删除所选 tracker ？</string>
    <string name="delete_selected_trackers">删除所选的所有 tracker ？</string>
    <string name="add_trackers">添加 tracker</string>
    <string name="dialog_add_trackers">（每行一个）</string>
    <string name="open_using">打开文件</string>
    <string name="peer_port" formatted="false">端口: %1$d</string>
    <string name="peer_relevance" formatted="false">关联度: %1$.1f</string>
    <string name="peer_connection_type" formatted="false">协议: %1$s</string>
    <string name="peer_total_download_upload" formatted="false">\u2193 %1$s \u2022 \u2191 %2$s</string>
    <string name="peer_client" formatted="false">客户端: %1$s</string>
    <string name="peer_connection_type_bittorrent">BT</string>
    <string name="peer_connection_type_web">Web</string>
    <string name="peer_connection_type_utp">μTP</string>
    <string name="peer_list_empty">当前 torrent 还没有连接到任何用户</string>
    <string name="piece_map">区块图</string>
    <string name="resume_torrent">继续</string>
    <string name="pause_torrent">暂停</string>
    <string name="share_magnet">分享磁力链接</string>
    <string name="save_torrent_file">保存 torrent 文件</string>
    <string name="torrent_speed_limit">速度限制</string>
    <string name="share_via">分享</string>
    <string name="save_torrent_file_successfully">torrent 文件保存成功</string>
    <string name="error_save_torrent_file">torrent 文件保存失败</string>
    <string name="speed_limit_title">速度限制</string>
    <string name="upload_speed">上传速度</string>
    <string name="download_speed">下载速度</string>
    <string name="speed_limit_dialog">单位 KiB/s （0 - 无限大）</string>
    <string name="send_text_to_clipboard">复制</string>
    <string name="text_copied_to_clipboard">文字已复制到黏贴板</string>
    <string name="app_error_occurred">应用程序发生错误。您可以将报告发送给开发人员。</string>
    <string name="error_comment_prompt">您可以在这里添加额外的信息和评论：</string>
    <string name="pref_header_appearance">显示</string>
    <string name="pref_header_behavior">行为</string>
    <string name="pref_header_storage">存储</string>
    <string name="pref_header_limitations">限制</string>
    <string name="pref_header_network">网络</string>
</resources>