<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:transitionName="actionBar"
                app:layout_scrollFlags="enterAlways"
                app:popupTheme="?attr/popupTheme"/>
        </android.support.design.widget.AppBarLayout>

        <com.liaopeikun.youzhong.customviews.EmptyRecyclerView
            android:id="@+id/torrent_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <TextView
            android:id="@+id/empty_view_torrent_list"
            style="@style/BaseTheme.EmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/torrent_list_empty"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/add_torrent_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/add"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="-10dp"
            android:scaleType="fitCenter"
            app:layout_behavior="com.liaopeikun.youzhong.customviews.SnackBarBehavior"
            app:menu_icon="@drawable/ic_fab_add"
            app:menu_labels_colorPressed="@color/fab_menu_pressed"
            app:menu_labels_colorRipple="@color/fab_menu_label_normal"
            fab:menu_animationDelayPerItem="50"
            fab:menu_backgroundColor="#ddffffff"
            fab:menu_colorNormal="@color/fab_background_normal"
            fab:menu_colorPressed="@color/fab_background_pressed"
            fab:menu_colorRipple="@color/accent_light"
            fab:menu_fab_size="normal"
            fab:menu_labels_colorNormal="@color/fab_menu_label_normal"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="@color/text_primary"
            fab:menu_labels_textSize="14sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="@color/fab_menu_shadow"
            fab:menu_shadowRadius="2dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="1dp"
            fab:menu_showShadow="true"
            >

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_link_white_18dp"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/fab_menu_pressed"
                app:fab_colorRipple="@color/fab_menu_ripple"
                fab:fab_label="@string/add_link"
                fab:fab_size="mini"
                />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/open_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_white_18dp"
                app:fab_colorNormal="@color/white"
                app:fab_colorPressed="@color/fab_menu_pressed"
                app:fab_colorRipple="@color/fab_menu_ripple"
                fab:fab_label="@string/open_file"
                fab:fab_size="mini"/>

        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>