<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_torrent_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="?attr/defaultRectRipple"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_torrent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="冰与火之歌：权力的游戏.Game.of.Thrones.S04E01"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/tv_torrent_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textAppearance="?attr/smallText"
                    tools:text="103KB"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_torrent_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="?attr/smallText"
                tools:text="2017-08-07"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_torrent_copy"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:minWidth="48dp"
                android:text="@string/copy_torrent_link"
                />

            <Button
                android:id="@+id/btn_torrent_download"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:minWidth="48dp"
                android:text="@string/download_now"
                />

            <Button
                android:id="@+id/btn_torrent_xunlei"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="36dp"
                android:minWidth="48dp"
                android:text="@string/download_in_xunlei"
                />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_navigate_next_black_24dp"
        tools:ignore="contentDescription"
        />

</LinearLayout>